Revision history for Perl extension MooseX-Singleton

0.25 2010-08-22
    - Fixes for latest Moose. (Dave Rolsky)

0.24 2010-07-15
    - Require Moose 0.94+. (Dave Rolsky)

0.23 2010-07-15
    - Use modern Moose APIs to avoid warnings from the next Moose. (Dave
      Rolsky)

0.22 2009-12-25
    - The ->initialize method was both broken and undocumented. RT
      #51260. (Dave Rolsky)
    - Updated docs to encourage use of ->instance and ->initialize, and
      discourage calling ->new directly. Doing so may be deprecated in a
      future release. (Dave Rolsky)

0.21 2009-09-12
    - Various modules in this class were trying to load the old pre-0.20
      classes, which have all been renamed. Tests passed if you had 0.19 or
      earlier installed, but failed for fresh installations. (Dave Rolsky)

0.20 2009-09-11
    - Converted this extension to use roles rather than metaclass
      subclasses. This means it will cooperate with other extensions on CPAN,
      like MooseX::StrictConstructor, etc. (Dave Rolsky)

0.19 2009-07-09
    - Remove ambiguity about copyright holder (Sartak)

0.18 2009-06-21
    - Changes to work Moose 0.82 (Dave Rolsky)

0.17 2009-04-24
    - Add ClassName->_clear_instance. (hdp)

0.16 2009-04-24
    - Changes to keep constructor inlining working with latest Moose &
      Class::MOP. This module will still work with any Moose from 0.74
      on up.

0.15 2009-04-07
    - Fixed to work with Moose 0.73_01

    - When an object was implicitly constructed by calling
      ClassName->attribute, it skipped the BUILD and BUILDARGS defined
      for a class. Report and test from Josh in RT #42690. (Dave
      Rolsky)

0.14 2009-01-22
    - Converted to use new method generation helpers in the most
      recent Moose (0.65) and Class::MOP (Dave Rolsky)

0.13 2008-12-08
    - Fixed to work with Moose 0.63

0.12 2008-09-20
    - Fixed to work with Moose 0.58

0.11 2008-09-05